tests/react_instance/react_instance.exp
Error ---------------------------------------------------------------------------------------------------- class.js:9:37

Cannot get `any.yep2` because property `yep2` (did you mean `yep1`?) is missing in `Foo` [1]. [prop-missing]

   class.js:9:37
   9| (any: React$ElementRef<Class<Foo>>).yep2; // Error
                                          ^^^^

References:
   class.js:9:30
   9| (any: React$ElementRef<Class<Foo>>).yep2; // Error
                                   ^^^ [1]


Error --------------------------------------------------------------------------------------------------- class.js:10:37

Cannot get `any.nope` because property `nope` is missing in `Foo` [1]. [prop-missing]

   class.js:10:37
   10| (any: React$ElementRef<Class<Foo>>).nope; // Error
                                           ^^^^

References:
   class.js:10:30
   10| (any: React$ElementRef<Class<Foo>>).nope; // Error
                                    ^^^ [1]


Error --------------------------------------------------------------------------------------------------- class.js:11:37

Cannot get `any.yep1` because property `yep1` (did you mean `yep2`?) is missing in `Bar` [1]. [prop-missing]

   class.js:11:37
   11| (any: React$ElementRef<Class<Bar>>).yep1; // Error
                                           ^^^^

References:
   class.js:11:30
   11| (any: React$ElementRef<Class<Bar>>).yep1; // Error
                                    ^^^ [1]


Error --------------------------------------------------------------------------------------------------- class.js:13:37

Cannot get `any.nope` because property `nope` is missing in `Bar` [1]. [prop-missing]

   class.js:13:37
   13| (any: React$ElementRef<Class<Bar>>).nope; // Error
                                           ^^^^

References:
   class.js:13:30
   13| (any: React$ElementRef<Class<Bar>>).nope; // Error
                                    ^^^ [1]


Error ------------------------------------------------------------------------------------------------- function.js:5:37

Cannot get `any.nope` because property `nope` is missing in undefined [1]. [incompatible-use]

   function.js:5:37
   5| (any: React$ElementRef<typeof Foo>).nope; // Error
                                          ^^^^

References:
   function.js:5:24
   5| (any: React$ElementRef<typeof Foo>).nope; // Error
                             ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ intrinsic.js:4:32

Cannot get `any.yep2` because property `yep2` (did you mean `yep1`?) is missing in object type [1]. [prop-missing]

   intrinsic.js:4:32
   4| (any: React$ElementRef<'foo'>).yep2; // Error
                                     ^^^^

References:
   lib/jsx.js:4:15
   4|     instance: {yep1: true, ...},
                    ^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ intrinsic.js:5:32

Cannot get `any.nope` because property `nope` is missing in object type [1]. [prop-missing]

   intrinsic.js:5:32
   5| (any: React$ElementRef<'foo'>).nope; // Error
                                     ^^^^

References:
   lib/jsx.js:4:15
   4|     instance: {yep1: true, ...},
                    ^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ intrinsic.js:6:32

Cannot get `any.yep1` because property `yep1` (did you mean `yep2`?) is missing in object type [1]. [prop-missing]

   intrinsic.js:6:32
   6| (any: React$ElementRef<'bar'>).yep1; // Error
                                     ^^^^

References:
   lib/jsx.js:9:15
   9|     instance: {yep2: true, ...},
                    ^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ intrinsic.js:8:32

Cannot get `any.nope` because property `nope` is missing in object type [1]. [prop-missing]

   intrinsic.js:8:32
   8| (any: React$ElementRef<'bar'>).nope; // Error
                                     ^^^^

References:
   lib/jsx.js:9:15
   9|     instance: {yep2: true, ...},
                    ^^^^^^^^^^^^^^^^^ [1]



Found 9 errors
